--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "molecular-dqn"]
-	path = molecular-dqn
+	path = molecule_synthesis/molecular-dqn
 	url = https://github.com/WardLT/molecular-dqn.git
